<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HospitalManagement</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Hospital_Management">Hospital Management</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Userid">User ID</string>
    <string name="TakeAppointment">Take Appointment</string>
    <string name="ViewHistory">View History</string>
    <string name="Ambulance">Call Ambulance</string>
    <string name="Nurse">Call Nurse</string>
    <string name="Info">My Information</string>
    <string name="CD">Choose Your Doctor</string>
    <string name="C1">Cardiologist</string>
    <string name="C2">Dentist</string>
    <string name="C3">Gynecologists</string>
    <string name="C4">Immunologists</string>
    <string name="C5">Neurologist</string>
    <string name="C6">Pediatricians</string>
    <string name="History">Your History</string>
    <string name="Schedule">My Schedule</string>
    <string name="MyInfo">My Information</string>
    <string name="PresMedicine">PresMedicine</string>
    <string name="PresTest">PresTest</string>
    <string name="GetPatientInfo">GetPatientInfo</string>
    <string name="DoctorHome">Doctor Home</string>
    <string name="profile">Edit Profile</string>
    <string name="type_prompt">Choose type</string>
    <string name="category_prompt">Choose type</string>
    <string-array name="type_arrays">
        <item>Inhouse</item>
        <item>Consultant</item>
    </string-array>
    <string-array name="category_arrays">
        <item>Dentist</item>
        <item>Cardiologist</item>
        <item>Gynecologists</item>
        <item>Immunologists</item>
        <item>Neurologist</item>
        <item>Pediatricians</item>
    </string-array>

</resources>