<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#CCCFFD"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Home"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:weightSum="2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_appointment"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#E96D63"
            android:onClick="onClick"
            android:clickable="true"
            android:textColor="#4A789C"
            android:text="@string/TakeAppointment" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onClick"
            android:clickable="true"
            android:background="#4A789C"
            android:textColor="#FFFFFF"
            android:text="@string/ViewHistory" />
        
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:weightSum="4"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/tv_ambulance"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="onClick"
            android:clickable="true"
            android:background="#85C1F5"
            android:text="@string/Ambulance" />

        <TextView
            android:id="@+id/tv_nurse"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:background="#F4BA70"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/Nurse" />
        
        <TextView
            android:id="@+id/tv_info"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="onClick"
            android:background="#7FCA9F"
            android:clickable="true"
            android:text="@string/Info" />
        
        <TextView
            android:id="@+id/tv_profile"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="onClick"
            android:clickable="true"
            android:background="#6E6568"
            android:textColor="#FFFFFF"
            android:text="@string/profile" />
        
        
    </LinearLayout>

</LinearLayout>