<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#E96D63"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop = "70dp"
        android:textColor="#F4BA70"
        android:text="@string/Hospital_Management"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight="10dp"
        android:textColor="#F4BA70"
        android:text="@string/Userid" />
    
    <EditText
        android:id="@+id/et_userid"
        android:layout_width="match_parent"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content" />

    

    

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="#F4BA70"
        android:layout_marginLeft = "10dp"
        android:layout_marginTop = "10dp"
        android:layout_marginRight="10dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight="40dp"
        android:ems="10" />
    
    
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textColor="#F4BA70"
        android:layout_marginLeft = "10dp"
        android:layout_marginTop = "10dp"
        android:layout_marginRight="10dp" />
    
   <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight="40dp" >
    </EditText>
    
    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="right"
        android:background="#4A789C"
        android:text="@string/Register" />

</LinearLayout>